// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Plugins reducer Should add a new accordion id 1`] = `
Object {
  "accordion-id": false,
}
`;

exports[`Plugins reducer Should remove an existing accordion id 1`] = `
Object {
  "id": true,
}
`;

exports[`Plugins reducer Should remove an existing accordion id 2`] = `Object {}`;

exports[`Plugins reducer Should return the default state 1`] = `Object {}`;

exports[`Plugins reducer Should toggle an existing accordion state 1`] = `
Object {
  "id": true,
  "non-id": true,
}
`;

exports[`Plugins reducer Should toggle an existing accordion state 2`] = `
Object {
  "id": false,
}
`;
